--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,23 @@
         <maven.javadoc.plugin.version>3.5.0</maven.javadoc.plugin.version>
         <maven.surefire.plugin.version>3.1.2</maven.surefire.plugin.version>
         <maven.surefire-junit5.version>1.2.1</maven.surefire-junit5.version>
+
+        <mysql-connector.version>8.2.0</mysql-connector.version>
     </properties>
+
+    <modules>
+        <module>application fundamentals</module>
+    </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.mysql</groupId>
+                <artifactId>mysql-connector-j</artifactId>
+                <version>${mysql-connector.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
