--- a/pom.xml
+++ b/pom.xml
@@ -21,14 +21,22 @@
         <maven.surefire-junit5.version>1.2.1</maven.surefire-junit5.version>
 
         <mysql-connector.version>8.2.0</mysql-connector.version>
+        <junit.version>5.10.0</junit.version>
     </properties>
 
     <modules>
         <module>application fundamentals</module>
+        <module>testing fundamentals</module>
     </modules>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>com.mysql</groupId>
                 <artifactId>mysql-connector-j</artifactId>
