--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,13 @@
 
         <mysql-connector.version>8.2.0</mysql-connector.version>
         <junit.version>5.10.0</junit.version>
+        <spring-framework.version>6.0.11</spring-framework.version>
     </properties>
 
     <modules>
         <module>application fundamentals</module>
         <module>testing fundamentals</module>
+        <module>spring framework I a fundamentals</module>
     </modules>
 
     <dependencyManagement>
@@ -41,6 +43,13 @@
                 <groupId>com.mysql</groupId>
                 <artifactId>mysql-connector-j</artifactId>
                 <version>${mysql-connector.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-framework-bom</artifactId>
+                <version>${spring-framework.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
