--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>application fundamentals</module>
         <module>testing fundamentals</module>
         <module>spring framework I a fundamentals</module>
+        <module>spring framework I b fundamentals</module>
     </modules>
 
     <dependencyManagement>
