--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>testing fundamentals</module>
         <module>spring framework I a fundamentals</module>
         <module>spring framework I b fundamentals</module>
+        <module>spring framework I c fundamentals</module>
     </modules>
 
     <dependencyManagement>
