--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>spring-framework-I-a-fundamentals</module>
         <module>spring-framework-I-b-fundamentals</module>
         <module>spring-framework-I-c-fundamentals</module>
+        <module>spring-framework-I-d-fundamentals</module>
     </modules>
 
     <dependencyManagement>
