--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <module>spring-framework-I-f-fundamentals</module>
         <module>spring-framework-I-g-fundamentals</module>
         <module>spring-framework-I-h-fundamentals</module>
+        <module>spring-framework-II-a-fundamentals</module>
     </modules>
 
     <dependencyManagement>
