--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <module>spring-framework-I-g-fundamentals</module>
         <module>spring-framework-I-h-fundamentals</module>
         <module>spring-framework-II-a-fundamentals</module>
+        <module>spring-framework-II-b-fundamentals</module>
     </modules>
 
     <dependencyManagement>
