--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>spring-framework-I-h-fundamentals</module>
         <module>spring-framework-II-a-fundamentals</module>
         <module>spring-framework-II-b-fundamentals</module>
+        <module>spring-framework-II-c-fundamentals</module>
     </modules>
 
     <dependencyManagement>
