--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>spring-framework-II-a-fundamentals</module>
         <module>spring-framework-II-b-fundamentals</module>
         <module>spring-framework-II-c-fundamentals</module>
+        <module>spring-framework-II-d-fundamentals</module>
     </modules>
 
     <dependencyManagement>
