--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <module>spring-framework-II-d-fundamentals</module>
         <module>spring-framework-III-a-fundamentals</module>
         <module>spring-framework-III-b-fundamentals</module>
+        <module>spring-framework-III-c-fundamentals</module>
     </modules>
 
     <dependencyManagement>
